--- a/education.html
+++ b/education.html
@@ -11,7 +11,7 @@
           <h1 class="titlebar"> Matthew White </h1>
           <nav class="titlebar">
             <ul class="titlebar">
-              <li class="titlebar"><a href="matt.html">Home</a></li>
+              <li class="titlebar"><a href="index.html">Home</a></li>
               <li class="titlebar"><a href="education.html">Education</a></li>
               <li class="titlebar"><a href="experience.html">Experience</a></li>
               <li class="titlebar"><a href="hobbies.html">Hobbies</a></li>
